commit after build travis finished

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,23 @@
-language: generic
-
 sudo: required
+language: generic
 
 services:
   - docker
 
 before_install:
-  - docker build -t dgesteves/docker-react -f Dockerfile.dev .
+  - docker build -t cygnetops/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true dgesteves/docker-react npm run test
+  - docker run -e CI=true cygnetops/docker-react npm test
+
+deploy:
+  provider: elasticbeanstalk
+  region: 'us-east-1'
+  app: 'docker'
+  env: 'docker-env'
+  bucket_name: 'elasticbeanstalk-us-east-1-923445559289'
+  bucket_path: 'docker'
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
